--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,14 @@
 <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">MO's Eat Da Burger App</h1>
-    <p class="lead">The best burger app for tracking the most best tasting burgers in the entire world!.</p>
-  </div>
+    <div class="container">
+        <h1 class="display-4">MO's Eat Da Burger App</h1>
+        <p class="lead">The best burger app for tracking the most best tasting burgers in the entire world!</p>
+    </div>
 </div>
 
 
 <div class="card-body">
 
-    <div class="firstPart">
+    <div class="toBeEaten">
 
         <form class="selectionForm">
             <div class="form-group">
@@ -23,18 +23,14 @@
         <p class="card-text">What Burger Are You Craving?</p>
     </div>
 
-    <div class="card text-center">
-        <div class="uneated">
-
             <ul>
                 {{#each burger_name}}
                 {{#unless devoured}}
 
                 <li>
-                    <span> {{id}}.{{burger_name}}</span>
+                    <p> {{id}}.{{burger_name}}</p>
                     <button type="button" class="btn change-eaten btn-success" data-id="{{id}}"
                         data-devoured="{{devoured}}">Devour</button>
-
                 </li>
 
                 {{/unless}}
@@ -42,24 +38,10 @@
 
             </ul>
 
-        </div>
+        </div> 
 
-        <div class="devoured">
-
-            <ul>
-                {{#each burger_name}}
-                {{#if devoured}}
-
-                <li>
-                    {{burger_name}}
-                    <button type="button" class="delete" class="btn btn-danger" data-id="{{this.id}}">devoured</button>
-                </li>
-                {{/if}}
-                {{/each}}
-            </ul>
-        </div>
+        </div> 
     </div>
 
 
-</div>
 </div>
