--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/burger_style.css" type="text/css">
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/models/burger.js"></script>
+	<script src="/burger.js"></script>
 </head>
 
 <body>
