Files suddenly became corrupted

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 
                 <li>
                     <p> {{id}}.{{burger_name}}</p>
-                    <button type="button" class="btn change-eaten btn-success" data-id="{{id}}"
+                    <button type="button" class="btn change-burger btn-works" data-id="{{id}}"
                         data-devoured="{{devoured}}">Devour</button>
                 </li>
 
