--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
     </div>
 
             <ul>
-                {{#each burger_name}}
+                {{#each burgers}}
                 {{#unless devoured}}
 
                 <li>
